# Proyecto-Avatar

./: README.md
Proyecto UM AVATAR/: Avatar.json  CMakeLists.txt  dialog.cpp  dialog.h  draw.cpp  main.cpp  render.cpp  render.h
